Create tables. Use apache db utils.